# fastkv

./: Cargo.toml  Dockerfile  README.md  data.binget
src/: lib.rs  main.rs
